# MoviePilot-Rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build_wheels.sh
src/: filter.rs  indexer.rs  lib.rs  metainfo.rs  utils.rs
src/bindings/: filter.rs  indexer.rs  metainfo.rs  mod.rs  python.rs  rss.rs
src/filter/: engine.rs  expression.rs  mod.rs  model.rs
src/indexer/: engine.rs  error.rs  mod.rs  model.rs  selector.rs
src/metainfo/: custom_words.rs  mod.rs  model.rs  options.rs  parser.rs  patterns.rs  regex.rs
src/rss/: mod.rs  model.rs  parser.rs
src/support/: cache.rs
tests/filter/: __init__.py  test_filter.py
tests/indexer/: __init__.py  test_indexer.py
tests/metainfo/: __init__.py  cases.py  options.py  test_metainfo.py
tests/rss/: __init__.py  test_rss.py
