[package]
name = "moviepilot-rust"
version = "0.1.4"
edition = "2021"
description = "Rust acceleration helpers for MoviePilot"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/jxxghp/MoviePilot-Rust"
exclude = ["/.venv", "/dist", "/target"]

[lib]
name = "moviepilot_rust"
crate-type = ["cdylib"]

[dependencies]
anitomy-pure = "0.1"
fancy-regex = "0.18"
inputx-pinyin = "1.0.2"
minijinja = "2.20"
chrono = "0.4"
once_cell = "1.20"
pyo3 = { version = "0.23", features = ["abi3-py311", "extension-module"] }
quick-xml = "0.38"
regex = "1.11"
scraper = "0.24"
url = "2.5"
